--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-melodic-nornet (0.1.1~rc1-1ubuntu1) xenial; urgency=high
+melodic-nornet (0.2.0-1ubuntu1) xenial; urgency=high
 
   * New release.
 
- -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Thu, 28 Sep 2017 08:08:08 +0800
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Fri, 20 Oct 2017 08:08:08 +0800
 
 melodic-nornet (0.1.0-1ubuntu1) xenial; urgency=high
 
