--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-melodic-nornet (0.2.1~rc2-1ubuntu1) xenial; urgency=high
+melodic-nornet (0.3.0-1ubuntu1) xenial; urgency=high
 
   * New release.
 
