--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-melodic-nornet (0.4.0~b2-1ubuntu1) xenial; urgency=high
+melodic-nornet (0.4.0-1ubuntu1) xenial; urgency=high
 
   * New release.
 
- -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Tue, 02 Nov 2017 08:08:08 +0800
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Thu, 16 Nov 2017 08:08:08 +0800
 
 melodic-nornet (0.3.0-1ubuntu1) xenial; urgency=high
 
