--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-melodic-nornet (0.4.4~rc1-1ubuntu1) xenial; urgency=high
+melodic-nornet (0.4.4-1ubuntu1) xenial; urgency=high
 
   * New release.
 
- -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Wed, 07 Jun 2018 08:08:08 +0800
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Thu, 07 Jun 2018 08:08:08 +0800
 
 melodic-nornet (0.4.3-1ubuntu1) xenial; urgency=high
 
