--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (0.5.0~rc1.0-1ubuntu1) xenial; urgency=high
+
+  * New release.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Mon, 29 Oct 2018 08:08:08 +0800
+
 melodic-nornet (0.4.4-1ubuntu1) xenial; urgency=high
 
   * New release.
