--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-melodic-nornet (0.5.0~rc1.14-1ubuntu1) xenial; urgency=high
+melodic-nornet (0.6.0-1ubuntu1) xenial; urgency=medium
 
   * New release.
 
