--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (0.6.0-1ubuntu1) xenial; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Dreibholz <dreibh@simula.no>  Wed, 15 May 2019 15:50:34 +0200
+
 melodic-nornet (0.5.0-1ubuntu1) xenial; urgency=medium
 
   * New release.
