--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-melodic-nornet (0.6.1~rc1.0-1ubuntu1) xenial; urgency=medium
+melodic-nornet (0.6.1-1ubuntu1) xenial; urgency=medium
 
   * New upstream release.
 
