--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+commit 181ece13723a46b858c2a283f909f91fb7859b67
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Mon Aug 5 16:37:57 2019 +0200
+
+    HTTP -> HTTPS.
+
+commit 76a0559205bbf2ee66d08441f10fd2ee2ead85cb
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Mon Aug 5 15:13:15 2019 +0200
+
+    Removed obsolete file.
+
 commit 4db3fc5da8ad2891fee16ed8363c8f4f92eab3ed
 Author: Thomas Dreibholz <dreibh@simula.no>
 Date:   Mon Aug 5 15:11:17 2019 +0200
