--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (0.7.0-1ubuntu1) xenial; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Dreibholz <dreibh@simula.no>  Mon, 05 Aug 2019 16:38:08 +0200
+
 melodic-nornet (0.6.3-1ubuntu1) xenial; urgency=medium
 
   * New upstream release.
