--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (0.7.1~rc0-1ubuntu1) xenial; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Dreibholz <dreibh@simula.no>  Wed, 07 Aug 2019 12:41:10 +0200
+
 melodic-nornet (0.7.0-1ubuntu1) xenial; urgency=medium
 
   * New upstream release.
