--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (0.8.0-1ubuntu1) xenial; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Thu, 22 Aug 2019 17:54:38 +0200
+
 melodic-nornet (0.7.1-1ubuntu1) xenial; urgency=medium
 
   * New upstream release.
