--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (0.8.2-1ubuntu1) xenial; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Fri, 20 Sep 2019 22:25:55 +0200
+
 melodic-nornet (0.8.1-1ubuntu1) xenial; urgency=medium
 
   * New upstream release.
