--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-melodic-nornet (0.8.3~rc0-1ubuntu1) xenial; urgency=medium
+melodic-nornet (0.8.3-1ubuntu1) xenial; urgency=medium
 
   * New upstream release.
 
- -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Tue, 22 Oct 2019 11:42:02 +0200
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Wed, 23 Oct 2019 14:11:13 +0200
 
 melodic-nornet (0.8.2-1ubuntu1) xenial; urgency=medium
 
