--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+melodic-nornet (0.8.4-1ubuntu1) xenial; urgency=medium
+
+  * New upstream release.
+  * debian/control: Updated standards version to 4.4.1.1.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Thu, 07 Nov 2019 15:24:11 +0100
+
 melodic-nornet (0.8.3-1ubuntu1) xenial; urgency=medium
 
   * New upstream release.
