--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+melodic-nornet (1.0.1-1ubuntu1) focal; urgency=medium
+
+  * New upstream release.
+  * debian/control: Updated standards version to 4.5.0.1.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Fri, 24 Apr 2020 12:40:30 +0200
+
 melodic-nornet (1.0.0-1ubuntu1) xenial; urgency=medium
 
   * New upstream release.
