--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-melodic-nornet (1.0.2~rc1-1ubuntu1) focal; urgency=medium
+melodic-nornet (1.0.2-1ubuntu1) focal; urgency=medium
 
   * New upstream release.
   * debian/control: Updated standards version to 4.5.0.2.
 
- -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Tue, 05 May 2020 08:45:17 +0200
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Tue, 05 May 2020 13:16:54 +0200
 
 melodic-nornet (1.0.1-1ubuntu1) focal; urgency=medium
 
