Improved packaging configuration.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+melodic-nornet (1.1.0~alpha1.1-1ubuntu1) focal; urgency=medium
+
+  * New upstream release.
+  * debian/control: Updated standards version to 4.5.0.3.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Mon, 05 Oct 2020 10:06:02 +0200
+
 melodic-nornet (1.0.2-1ubuntu1) focal; urgency=medium
 
   * New upstream release.
