--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+commit d7fff97ef9ab911e4819fe04209c3fb31043d202
+Merge: 6abfdc8 9f0271e
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Thu Oct 8 15:47:55 2020 +0200
+
+    Merge branch 'master' of github.com:simula/melodic-nornet
+
+commit 6abfdc8c8025bf4b2550abfe4953102e122a55fa
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Thu Oct 8 15:47:42 2020 +0200
+
+    Updated scripts.
+
+commit 9f0271e5623aa7c266a8a9ff8b95a0abdfa853ce
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Tue Oct 6 20:50:22 2020 +0200
+
+    New release melodic-nornet-1.1.0.
+
 commit 391b44d0191abafdd1ee8694d8d51338f4c895f6
 Author: Thomas Dreibholz <dreibh@simula.no>
 Date:   Mon Oct 5 22:01:46 2020 +0200
