--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (1.1.3-1ubuntu1) hirsute; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Sun, 15 Nov 2020 18:05:32 +0100
+
 melodic-nornet (1.1.2-1ubuntu1) focal; urgency=medium
 
   * New upstream release.
