--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,179 @@
+commit 15e34ca098240877db69922f8a5578df2b9189d0
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Mon Jun 14 12:42:21 2021 +0200
+
+    RPM build fix for Fedora 34.
+
+commit 4f910960b32241f461fa676f17f379ca26ddbe09
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Jun 9 12:03:27 2021 +0200
+
+    Added logo.
+
+commit 6ed8ef5760a2470044db781b084a0dce12dfc675
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Mon May 3 21:22:02 2021 +0200
+
+    Updated build scripts
+
+commit d994e1259395ec3f8eb5dfbe9885bd4888dbab06
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Mar 10 11:35:06 2021 +0100
+
+    Updated Travis CI configuration.
+
+commit 36320388a21792c448749a1b3342a029dc0aeffb
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Mar 10 11:34:24 2021 +0100
+
+    Updated Travis CI configuration.
+
+commit c36b6d07e287f713600790348a5bfd1a3fbe8d92
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Fri Mar 5 18:52:37 2021 +0100
+
+    Updated Travis CI configuration
+
+commit 344e780bb016a6852824e55d275e40161b87f9ce
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Fri Mar 5 16:01:45 2021 +0100
+
+    Updated build scripts
+
+commit 774012eb48ffc9635ab492d78d25c739095a0b75
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Mar 3 19:41:47 2021 +0100
+
+    Updated script.
+
+commit b76a9a6e02efcedb7b3c34b98bc2a3d9ba092916
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Mon Mar 1 21:20:30 2021 +0100
+
+    Updated build scripts
+
+commit 802e61f24d9de03713028d708ef4c2d194a68383
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Mon Mar 1 16:30:36 2021 +0100
+
+    Updated build scripts
+
+commit 3c0bd4e53233d64c3c7a1a0484df5adffb7ff809
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Mon Mar 1 16:13:22 2021 +0100
+
+    Improved autogen.sh with options for static analysis.
+
+commit 864e049509ccf24b24b210e42b07b0ce3b63cc96
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Feb 17 17:57:12 2021 +0100
+
+    Cleaned up CMakeLists.txt.
+
+commit acc8ca5597d4c0d45d1f7ed019147064503bbb97
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Feb 17 15:19:07 2021 +0100
+
+    Updated build scripts
+
+commit a77959f8aff3a234ebcb196c65cbf3b43f704847
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Feb 17 15:19:06 2021 +0100
+
+    Updated build scripts
+
+commit 97f7da639b6cb33bdf5ae1a176395d0fead9dc6c
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Feb 17 15:17:37 2021 +0100
+
+    Updated build scripts
+
+commit 54551652dff0b26698528eb19570e70117b8712f
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Feb 17 15:17:37 2021 +0100
+
+    Updated build scripts
+
+commit e5b4823f652513591b60781e39d77b23cbc52de6
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Feb 17 15:16:37 2021 +0100
+
+    Header updates.
+
+commit b491e14da3bf7b2f76c2c1df0499e64170a7ede8
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Sat Jan 30 07:40:00 2021 +0100
+
+    Updated Travis CI configuration
+
+commit e0ac554322f4f3b7c174e5e8eec7fb46d150c804
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Thu Jan 7 18:19:54 2021 +0100
+
+    Updated script.
+
+commit 800bb1019501fae0231498f5e22b5cbca3a9189d
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Thu Jan 7 17:21:30 2021 +0100
+
+    An update.
+
+commit ced5f30a7f8f4b8d9e9ddd746ef1a665a99499d1
+Merge: d109cb4 c10b2d6
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Thu Jan 7 16:58:37 2021 +0100
+
+    Merge branch 'master' of https://github.com/simula/melodic-nornet
+
+commit c10b2d6b82731efa56dd0bc85262d3c2dbd002a0
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Thu Jan 7 16:58:09 2021 +0100
+
+    Added configuration.
+
+commit d109cb490508edd13374466bee4e544a3e430515
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Thu Jan 7 16:57:21 2021 +0100
+
+    Added configuration.
+
+commit d08c63075787bb8ef2a23603084dc3a8fec49c50
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Thu Jan 7 16:56:19 2021 +0100
+
+    Added script.
+
+commit 6168ce6cc3bfbcc6651f2c218bb747eaffbbc739
+Merge: 41241a9 1943b67
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Dec 30 15:28:24 2020 +0100
+
+    Merge branch 'master' of github.com:simula/melodic-nornet
+
+commit 41241a9623f2161ea69bce25e3dedd52df4baf25
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Dec 30 15:28:15 2020 +0100
+
+    Added configurations.
+
+commit 1943b671d85a2c61ac19542e15c85c2bfd1bdb1e
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Dec 30 14:51:20 2020 +0100
+
+    Added scripts.
+
+commit 4fef5b854f0b356257d42aa12f56bab2ecab8c4d
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Wed Dec 30 14:50:32 2020 +0100
+
+    Added network configuration.
+
+commit b198d20bd3dd382508b28993615ae455c7a0d736
+Author: Thomas Dreibholz <dreibh@simula.no>
+Date:   Sun Nov 15 18:05:47 2020 +0100
+
+    New release melodic-nornet-1.1.3.
+
 commit 3ca088beaf0db8ecf5e29d655a30d61969250789
 Author: Thomas Dreibholz <dreibh@simula.no>
 Date:   Sun Nov 15 13:43:38 2020 +0100
