--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+melodic-nornet (1.1.4-1ubuntu1) hirsute; urgency=medium
+
+  * New upstream release.
+  * debian/control: Updated standards version to 4.5.1.0.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Mon, 14 Jun 2021 12:44:15 +0200
+
 melodic-nornet (1.1.3-1ubuntu1) hirsute; urgency=medium
 
   * New upstream release.
