--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+melodic-nornet (1.1.5-1ubuntu1) hirsute; urgency=medium
+
+  * New upstream release.
+  * debian/control: Updated standards version to 4.6.0.1.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Mon, 14 Feb 2022 17:15:29 +0100
+
 melodic-nornet (1.1.4-1ubuntu1) hirsute; urgency=medium
 
   * New upstream release.
